--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,11 @@
-tempfile
 pydub
 speechrecognition
 wikipedia
-webbrowser
-pyautogui
 pygame
-gTTS
-os-sys
-jsonlib
 pyaudio
+pyautogui
+gtts
 requests
+webbrowser
 beautifulsoup4
 google-api-python-client
-groq
-re
